// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flexbox matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Flexbox
    classes={
      Object {
        "abase": "abase",
        "acenter": "acenter",
        "aend": "aend",
        "astart": "astart",
        "astretch": "astretch",
        "caround": "caround",
        "cbetween": "cbetween",
        "ccenter": "ccenter",
        "cend": "cend",
        "col": "col",
        "colR": "colR",
        "cstart": "cstart",
        "cstretch": "cstretch",
        "flex": "flex",
        "iFlex": "iFlex",
        "jaround": "jaround",
        "jbetween": "jbetween",
        "jcenter": "jcenter",
        "jend": "jend",
        "jevenly": "jevenly",
        "jstart": "jstart",
        "noWrap": "noWrap",
        "row": "row",
        "rowR": "rowR",
        "sauto": "sauto",
        "sbase": "sbase",
        "scenter": "scenter",
        "send": "send",
        "sstart": "sstart",
        "sstretch": "sstretch",
        "wrap": "wrap",
        "wrapR": "wrapR",
      }
    }
    display="flex"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": undefined,
      "className": "flex",
      "id": undefined,
      "style": Object {},
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "flex",
        "id": undefined,
        "style": Object {},
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`Flexbox styles matches the snapshot 1`] = `
Object {
  "abase": Object {
    "alignItems": "baseline",
  },
  "acenter": Object {
    "alignItems": "center",
  },
  "aend": Object {
    "alignItems": "flex-end",
  },
  "astart": Object {
    "alignItems": "flex-start",
  },
  "astretch": Object {
    "alignItems": "stretch",
  },
  "caround": Object {
    "alignContent": "space-around",
  },
  "cbetween": Object {
    "alignContent": "space-between",
  },
  "ccenter": Object {
    "alignContent": "center",
  },
  "cend": Object {
    "alignContent": "flex-end",
  },
  "col": Object {
    "flexDirection": "column",
  },
  "colR": Object {
    "flexDirection": "column-reverse",
  },
  "cstart": Object {
    "alignContent": "flex-start",
  },
  "cstretch": Object {
    "alignContent": "stretch",
  },
  "flex": Object {
    "display": "flex",
  },
  "iFlex": Object {
    "display": "inline-flex",
  },
  "jaround": Object {
    "justifyContent": "space-around",
  },
  "jbetween": Object {
    "justifyContent": "space-between",
  },
  "jcenter": Object {
    "justifyContent": "center",
  },
  "jend": Object {
    "justifyContent": "flex-end",
  },
  "jevenly": Object {
    "justifyContent": "space-evenly",
  },
  "jstart": Object {
    "justifyContent": "flex-start",
  },
  "noWrap": Object {
    "flexWrap": "nowrap",
  },
  "row": Object {
    "flexDirection": "row",
  },
  "rowR": Object {
    "flexDirection": "row-reverse",
  },
  "sauto": Object {
    "alignSelf": "auto",
  },
  "sbase": Object {
    "alignSelf": "baseline",
  },
  "scenter": Object {
    "alignSelf": "center",
  },
  "send": Object {
    "alignSelf": "flex-end",
  },
  "sstart": Object {
    "alignSelf": "flex-start",
  },
  "sstretch": Object {
    "alignSelf": "stretch",
  },
  "wrap": Object {
    "flexWrap": "wrap",
  },
  "wrapR": Object {
    "flexWrap": "wrap-reverse",
  },
}
`;

exports[`FlexboxJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_currentValue2": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_threadCount": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_currentValue2": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_threadCount": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
